# embanded

./: .pylintrc  LICENSE  README.md  __init__.py  environment_linux.yml  environment_macos.yml  setup.cfg  setup.m
.github/workflows/: python-app.yml
embanded/: __init__.py  _numpy_linalg_utils.py  _numpy_model_utils.py  _numpy_test.py  _torch_linalg_utils.py  _torch_model_utils.py  _torch_test.py  embanded.py  embanded_numpy.py  embanded_test.py  embanded_torch.py  helpers.py  model_utils.py
embanded/tests/: tests_embanded.py
examples/: README.md
examples/matlab/: example01.m  example02.m  example03.m  example06.m  example_eeg_encoding.m  example_simulation_decoding.m
examples/matlab/func/: scaledata.m  timelag.m
examples/python/: README.md  example01.mat  example01.py  example01_torch.py  example02.mat  example02.py  example02_torch.py  example03.mat  example03.py  example03_torch.py  example06.mat  example06.py  example06_torch.py  example_sklearn.py  example_sklearn_01.py  example_sklearn_02.py
examples/python/grouplasso/: README.md  example_group_lasso_modified.py  example_sparse_group_lasso_modified.py
examples/runtime/: README.md  compare_models.py  example01.py  example02.py  example03.py  example04.py
matlab/: embanded.m
matlab/functions/: check_input.m  matern_type_kernel.m  matrix_centering.m  matrix_cholesky_logdet.m  matrix_cholesky_solve.m  matrix_inv_cholesky.m  matrix_trace_of_product.m  one_hot_encoding.m  timelag.m
