[metadata]
name = embanded
author = Søren A. Fuglsang, Kristoffer H. Madsen, Oula Puonti, Hartwig R. Siebner, Jens Hjortkjær
maintainer = Søren A. Fuglsang, Kristoffer H. Madsen, Oula Puonti, Hartwig R. Siebner, Jens Hjortkjær
license = MIT
version = 0.0.1
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
description = Exploring an EM-algorithm for banded regression in computational neuroscience
long_description = file: README.md
long_description_content_type = text/markdown
url=https://git.drcmr.dk/sorenaf/embanded


[options]
zip_safe = False
include_package_data = True
python_requires >= 3.6
packages = find:
install_requires =
    numba
    matplotlib
    numpy
    scipy
    

[options.extras_require]
test =
     pytest
