[metadata]
name = embanded
author = Søren A. Fuglsang, Kristoffer H. Madsen, Oula Puonti, Hartwig R. Siebner, Jens Hjortkjær
maintainer = Søren A. Fuglsang
license_files = LICENSE
version = 0.0.4
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
description = Exploring an EM-algorithm for banded regression in computational neuroscience
long_description = file: README.md
long_description_content_type = text/markdown


[options]
zip_safe = False
include_package_data = True
python_requires >= 3.6
packages = find:
install_requires =
    matplotlib
    numpy
    scipy
    absl-py

[options.extras_require]
test =
    pytest
    pylint
    torch
torch =
    torch
    scikit-learn
examples =
    torch
    scikit-learn
    pandas
    seaborn

